force-app/main/default/objects/sked__Location__c/fields/AED_Available__c.field-meta.xml
<CustomField>
    <fullName>AED_Available__c</fullName>
    <description>HRP-12166: Add Dropdown for EAP Map Available and AED Dropdown to Site/Details/Security and Drive Worksheet-Additional Site Information.</description>
    <label>AED Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>