force-app/main/default/objects/sked__Location__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Not a valid Chapter.</errorMessage>
        <filterItems>
            <field>Chapter__c.Type__c</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>