force-app/main/default/objects/sked__Location__c/fields/Combined_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>Combined_City_and_State__c</fullName>
    <description>Combined City and State</description>
    <formula>IF(
 NOT(ISBLANK(sked_City__c)) &amp;&amp; NOT(ISBLANK(sked_State__c)),
 sked_City__c &amp; &quot;, &quot; &amp; sked_State__c,
   IF(
     NOT(ISBLANK(sked_City__c)) || NOT(ISBLANK(sked_State__c)),
   IF(
    NOT(ISBLANK(sked_City__c)),
    sked_City__c,
   sked_State__c
   ),
    null
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined City and State</label>
    <type>Text</type>
</CustomField>