force-app/main/default/objects/sked__Location__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <inlineHelpText>Enter contact, generally closest hospital if 911 is unavailable</inlineHelpText>
    <label>Emergency Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>