force-app/main/default/objects/sked__Location__c/fields/Initial_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initial_Reviewer_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>