force-app/main/default/objects/sked__Location__c/fields/Logged_In_User_Initial_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Initial_Reviewer__c</fullName>
    <formula>Initial_Reviewer__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Initial Reviewer</label>
    <type>Checkbox</type>
</CustomField>