force-app/main/default/objects/sked__Location__c/fields/National_Name_Second_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Name_Second_Review_Date__c</fullName>
    <label>National Name Second Review Date</label>
    <type>Date</type>
</CustomField>