force-app/main/default/objects/sked__Location__c/fields/National_Name_Status__c.field-meta.xml
<CustomField>
    <fullName>National_Name_Status__c</fullName>
    <label>National Name Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review Pending</fullName>
            </value>
            <value>
                <fullName>Second Review Pending</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
            <value>
                <fullName>Initial Review Completed</fullName>
            </value>
            <value>
                <fullName>Second Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>