force-app/main/default/objects/sked__Location__c/fields/Site_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_External_ID__c</fullName>
    <description>Site External ID to help with integrations</description>
    <externalId>true</externalId>
    <inlineHelpText>Site External ID</inlineHelpText>
    <label>Site External ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>