force-app/main/default/objects/sked__Location__c/fields/Site_Smoking_Policy__c.field-meta.xml
<CustomField>
    <fullName>Site_Smoking_Policy__c</fullName>
    <label>Site Smoking Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoking Prohibited on Grounds</fullName>
            </value>
            <value>
                <fullName>Designated Areas Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>