force-app/main/default/objects/sked__Location__c/fields/sked_220_outlets__c.field-meta.xml
<CustomField>
    <fullName>sked_220_outlets__c</fullName>
    <label>220 outlets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>