force-app/main/default/objects/sked__Location__c/fields/sked_911_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>sked_911_Unavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>911 Unavailable</label>
    <type>Checkbox</type>
</CustomField>