force-app/main/default/objects/sked__Location__c/fields/sked__Address__c.field-meta.xml
<CustomField>
    <fullName>sked__Address__c</fullName>
    <description>The address of the location</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>