force-app/main/default/objects/sked__Location__c/fields/sked__Region__c.field-meta.xml
<CustomField>
    <fullName>sked__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>