force-app/main/default/objects/sked__Location__c/fields/sked__Requires_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>sked__Requires_Whitelist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this location require resources to be whitelisted before they can be allocated? (i.e. for site inductions)</inlineHelpText>
    <label>Requires Whitelist</label>
    <type>Checkbox</type>
</CustomField>