force-app/main/default/objects/sked__Location__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
            <value>
                <fullName>Mobile Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>