force-app/main/default/objects/sked__Location__c/fields/sked_Address_1__c.field-meta.xml
<CustomField>
    <fullName>sked_Address_1__c</fullName>
    <label>Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>