force-app/main/default/objects/sked__Location__c/fields/sked_Address_2__c.field-meta.xml
<CustomField>
    <fullName>sked_Address_2__c</fullName>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>