force-app/main/default/objects/sked__Location__c/fields/sked_Air_conditioned__c.field-meta.xml
<CustomField>
    <fullName>sked_Air_conditioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Conditioned?</label>
    <type>Checkbox</type>
</CustomField>