force-app/main/default/objects/sked__Location__c/fields/sked_ARC_Vehicle_Parking_Directions__c.field-meta.xml
<CustomField>
    <fullName>sked_ARC_Vehicle_Parking_Directions__c</fullName>
    <label>ARC Vehicle Parking Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>