force-app/main/default/objects/sked__Location__c/fields/sked_Automation_Suitability__c.field-meta.xml
<CustomField>
    <fullName>sked_Automation_Suitability__c</fullName>
    <inlineHelpText>Indicates if the Site is Suitable or Unsuitable for Double Red Blood Cells.</inlineHelpText>
    <label>Automation Suitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suitable</fullName>
            </value>
            <value>
                <fullName>Unsuitable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>