force-app/main/default/objects/sked__Location__c/fields/sked_Base_Description__c.field-meta.xml
<CustomField>
    <fullName>sked_Base_Description__c</fullName>
    <label>Base Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>