force-app/main/default/objects/sked__Location__c/fields/sked_Break_location__c.field-meta.xml
<CustomField>
    <fullName>sked_Break_location__c</fullName>
    <label>Break Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>