force-app/main/default/objects/sked__Location__c/fields/sked_Chapter__c.field-meta.xml
<CustomField>
    <fullName>sked_Chapter__c</fullName>
    <label>Chapter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>