force-app/main/default/objects/sked__Location__c/fields/sked_City__c.field-meta.xml
<CustomField>
    <fullName>sked_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>