force-app/main/default/objects/sked__Location__c/fields/sked_Collection_Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_Name__c</fullName>
    <formula>sked__Region__r.sked_Biomed_Collection_Op_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Operation Name</label>
    <type>Text</type>
</CustomField>