force-app/main/default/objects/sked__Location__c/fields/sked_County__c.field-meta.xml
<CustomField>
    <fullName>sked_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>