force-app/main/default/objects/sked__Location__c/fields/sked_Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>sked_Cross_Street__c</fullName>
    <label>Cross Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>