force-app/main/default/objects/sked__Location__c/fields/sked_Date_Site_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_Site_Inspection_Completed__c</fullName>
    <label>Date Site Inspection Completed</label>
    <type>Date</type>
</CustomField>