force-app/main/default/objects/sked__Location__c/fields/sked_Days_of_Week_Preferred__c.field-meta.xml
<CustomField>
    <fullName>sked_Days_of_Week_Preferred__c</fullName>
    <label>Days of Week Preferred</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>