force-app/main/default/objects/sked__Location__c/fields/sked_Directions_From_CollectionOperation__c.field-meta.xml
<CustomField>
    <fullName>sked_Directions_From_CollectionOperation__c</fullName>
    <label>Directions From Collection Operation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>