force-app/main/default/objects/sked__Location__c/fields/sked_Do_Not_Use_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>sked_Do_Not_Use_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Use Vehicle</label>
    <type>Checkbox</type>
</CustomField>