force-app/main/default/objects/sked__Location__c/fields/sked_Elevator_Close__c.field-meta.xml
<CustomField>
    <fullName>sked_Elevator_Close__c</fullName>
    <label>Elevator Close</label>
    <type>Time</type>
</CustomField>