force-app/main/default/objects/sked__Location__c/fields/sked_Elevator_Open__c.field-meta.xml
<CustomField>
    <fullName>sked_Elevator_Open__c</fullName>
    <label>Elevator Open</label>
    <type>Time</type>
</CustomField>