force-app/main/default/objects/sked__Location__c/fields/sked_Elevator_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Elevator_Type__c</fullName>
    <inlineHelpText>Consider Role Time Variance for additional set up or breakdown time if elevator is needed to transfer equipment.</inlineHelpText>
    <label>Elevator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>