force-app/main/default/objects/sked__Location__c/fields/sked_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>sked_Emergency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>sked_Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>