force-app/main/default/objects/sked__Location__c/fields/sked_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Date__c</fullName>
    <defaultValue>IF(
AND(MONTH(TODAY()) = 2, DAY(TODAY()) = 29),
DATE(YEAR(TODAY())+ 50, 3, 1),
DATE(YEAR(TODAY()) + 50, MONTH(TODAY()), DAY(TODAY()))
)</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>