force-app/main/default/objects/sked__Location__c/fields/sked_Equipment_X_Ray_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Equipment_X_Ray_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment X Ray  Required</label>
    <type>Checkbox</type>
</CustomField>