force-app/main/default/objects/sked__Location__c/fields/sked_Escort_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Escort_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Staff members are required to have escort at facility.  Note name or position of escort via the Blood Drive Opportunity record.</inlineHelpText>
    <label>Escort Required</label>
    <type>Checkbox</type>
</CustomField>