force-app/main/default/objects/sked__Location__c/fields/sked_Fixed_Site_Appointment_Pattern__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Appointment_Pattern__c</fullName>
    <label>Fixed Site Appointment Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grouped</fullName>
            </value>
            <value>
                <fullName>Even</fullName>
            </value>
            <value>
                <fullName>Even - 4 Interval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>