force-app/main/default/objects/sked__Location__c/fields/sked_Floor_Covering_Requirement__c.field-meta.xml
<CustomField>
    <fullName>sked_Floor_Covering_Requirement__c</fullName>
    <inlineHelpText>Plastic floor covering is part of the standard set up.  If required, sponsor provided covering should be set up prior to staff arrival and is at the responsibility of Donor Recruitment to coordinate.</inlineHelpText>
    <label>Floor Covering Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic floor covering provided by ARC</fullName>
                <default>true</default>
                <label>Plastic floor covering provided by ARC</label>
            </value>
            <value>
                <fullName>Sponsor provided floor covering</fullName>
            </value>
            <value>
                <fullName>No floor covering required</fullName>
                <isActive>false</isActive>
                <label>No floor covering required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>