force-app/main/default/objects/sked__Location__c/fields/sked_Floor_Description__c.field-meta.xml
<CustomField>
    <fullName>sked_Floor_Description__c</fullName>
    <label>Floor Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>