force-app/main/default/objects/sked__Location__c/fields/sked_Heat__c.field-meta.xml
<CustomField>
    <fullName>sked_Heat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heat?</label>
    <type>Checkbox</type>
</CustomField>