force-app/main/default/objects/sked__Location__c/fields/sked_Initial_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>sked_Initial_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Evaluation</label>
    <type>Checkbox</type>
</CustomField>