force-app/main/default/objects/sked__Location__c/fields/sked_Inside_stairs__c.field-meta.xml
<CustomField>
    <fullName>sked_Inside_stairs__c</fullName>
    <label>Inside stairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>