force-app/main/default/objects/sked__Location__c/fields/sked_Max_Auto_Machines__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Auto_Machines__c</fullName>
    <label>Max Auto Machines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>