force-app/main/default/objects/sked__Location__c/fields/sked_Maximum_Beds__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Beds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>