force-app/main/default/objects/sked__Location__c/fields/sked_Maximum_Booths__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Booths__c</fullName>
    <label>Maximum Booths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>