force-app/main/default/objects/sked__Location__c/fields/sked_Miles_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sked_Miles_Minutes__c</fullName>
    <label>Miles &amp; Minutes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>