force-app/main/default/objects/sked__Location__c/fields/sked_National_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_National_Name__c</fullName>
    <label>National Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>