force-app/main/default/objects/sked__Location__c/fields/sked_Next_Travel_Time_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Next_Travel_Time_Refresh_Date__c</fullName>
    <formula>sked_Collection_Operation__r.sked_Next_Travel_Time_Refresh_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next scheduled Travel Time Refresh Date</label>
    <type>Date</type>
</CustomField>