force-app/main/default/objects/sked__Location__c/fields/sked_No_Cell_Phones__c.field-meta.xml
<CustomField>
    <fullName>sked_No_Cell_Phones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Cell Phones</label>
    <type>Checkbox</type>
</CustomField>