force-app/main/default/objects/sked__Location__c/fields/sked_On_Site_Food_Canteen_Other__c.field-meta.xml
<CustomField>
    <fullName>sked_On_Site_Food_Canteen_Other__c</fullName>
    <label>On-Site Food/Canteen Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>