force-app/main/default/objects/sked__Location__c/fields/sked_On_Site_Food_Conditions__c.field-meta.xml
<CustomField>
    <fullName>sked_On_Site_Food_Conditions__c</fullName>
    <label>On-Site Food Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kosher Only</fullName>
            </value>
            <value>
                <fullName>Peanut Free</fullName>
            </value>
            <value>
                <fullName>No Caffeine</fullName>
            </value>
            <value>
                <fullName>No Off-Site Food</fullName>
            </value>
            <value>
                <fullName>Vendor Only Food</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>