force-app/main/default/objects/sked__Location__c/fields/sked_Outside_stairs__c.field-meta.xml
<CustomField>
    <fullName>sked_Outside_stairs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outside Stairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>