force-app/main/default/objects/sked__Location__c/fields/sked_Pay_for_Parking__c.field-meta.xml
<CustomField>
    <fullName>sked_Pay_for_Parking__c</fullName>
    <label>Pay for Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Required – Open parking​</fullName>
            </value>
            <value>
                <fullName>Validated by Sponsor​</fullName>
            </value>
            <value>
                <fullName>Staff Responsible​</fullName>
            </value>
            <value>
                <fullName>Capped Meters​</fullName>
            </value>
            <value>
                <fullName>Prepaid Parking Voucher​</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>