force-app/main/default/objects/sked__Location__c/fields/sked_Pay_for_Parking_Details__c.field-meta.xml
<CustomField>
    <fullName>sked_Pay_for_Parking_Details__c</fullName>
    <inlineHelpText>Provide details if &#39;Other&#39; option was selected for Pay for Parking.</inlineHelpText>
    <label>Pay for Parking Details</label>
    <type>TextArea</type>
</CustomField>