force-app/main/default/objects/sked__Location__c/fields/sked_Phone_911_in_case_of_emergency__c.field-meta.xml
<CustomField>
    <fullName>sked_Phone_911_in_case_of_emergency__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone 911 in case of emergency?</label>
    <type>Checkbox</type>
</CustomField>