force-app/main/default/objects/sked__Location__c/fields/sked_Physical_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Physical_Location_Type__c</fullName>
    <label>Physical Location Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
            <value>
                <fullName>Inside/Outside</fullName>
                <isActive>false</isActive>
                <label>Inside/Outside</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>