force-app/main/default/objects/sked__Location__c/fields/sked_Pre_Drive_Security_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Pre_Drive_Security_Due_Date__c</fullName>
    <inlineHelpText>Date which Security Information, Staff List or Sponsor Security Form is required by.  If required pre-drive, the form/list will be sent to the Security Contact on the Blood Drive Opportunity record.</inlineHelpText>
    <label>Pre-Drive Security Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>