force-app/main/default/objects/sked__Location__c/fields/sked_Ready_for_National_Name_Review__c.field-meta.xml
<CustomField>
    <fullName>sked_Ready_for_National_Name_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for National Name Review</label>
    <type>Checkbox</type>
</CustomField>