force-app/main/default/objects/sked__Location__c/fields/sked_Real_ID_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Real_ID_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HRP-14700</description>
    <label>Real ID Required</label>
    <type>Checkbox</type>
</CustomField>