force-app/main/default/objects/sked__Location__c/fields/sked_Restroom_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Restroom_Location__c</fullName>
    <inlineHelpText>Restroom should be on the same floor as the blood drive and must have running water, soap and hand drying.</inlineHelpText>
    <label>Restroom Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>