force-app/main/default/objects/sked__Location__c/fields/sked_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Room_Name__c</fullName>
    <label>Room Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>